gccida/c1/apply_delayed_renames
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_delayed_renames/src/ssa.c:1255:30: error: use of undeclared identifier 'machine_mode'
v2->new_reg = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)v2->old_reg + 2)); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_delayed_renames/src/obj/ssa.o] Error 1
